--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -154,7 +154,7 @@ WHERE
   t1."state" AS "state",
   t1."error" AS "error",
   COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND (t2."owner" IS NULL) AND (t2."processed" = 0)) AS "partitons_waiting",
-  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND (t2."owner" IS NOT NULL)) AS "partitons_started",
+  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND ((t2."owner" IS NOT NULL) OR (t2."processed" &gt; 0))) AS "partitons_started",
   COUNT(1) FILTER (WHERE t2."is_completed" = TRUE) AS "partitions_completed",
   SUM(t2."remaining") AS "keys_remaining",
   SUM(t2."processed") AS "keys_completed",
