--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -373,7 +373,7 @@ WHERE
     SUM(t2."processed") AS "keys_completed",
     COALESCE(MAX(t2."updated"), t1."updated") AS "last_activity",
     COALESCE(SUM(t2."acquired") - COUNT(1), 0) AS "ownership_changes",
-    (SELECT COUNT(1) FROM "partitions" WHERE ("partitions"."job_id" = $id) AND ("is_split_requested" = 1)) AS "split_requests_pending"
+    (SELECT COUNT(1) FROM "partitions" WHERE ("partitions"."job_id" = $id) AND (t1."state" = 2) AND ("is_split_requested" = 1)) AS "split_requests_pending"
   FROM
     "jobs" t1
     LEFT JOIN "partitions" t2 ON (t1."id" = t2."job_id")
@@ -400,7 +400,7 @@ SELECT
   "keys_remaining" AS "keys_remaining",
   "keys_completed" AS "keys_completed",
   "last_activity" AS "last_activity",
-  ("ownership_changes" + "partitons_waiting") AS "ownership_changes",
+  ("ownership_changes" - "partitons_started" - "partitions_completed") AS "ownership_changes",
   "split_requests_pending" AS "split_requests_pending"
 FROM
   "summary";</value>
