Renames properties Waiting and Started of the Summary.PartitionCounts type to Untouched and InProgress, respectively.

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -321,8 +321,8 @@ WHERE
   t1."completed" AS "completed",
   t1."state" AS "state",
   t1."error" AS "error",
-  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND (t2."owner" IS NULL) AND (t2."processed" = 0)) AS "partitons_waiting",
-  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND ((t2."owner" IS NOT NULL) OR (t2."processed" > 0))) AS "partitons_started",
+  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND (t2."owner" IS NULL) AND (t2."processed" = 0)) AS "partitons_untouched",
+  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND ((t2."owner" IS NOT NULL) OR (t2."processed" > 0))) AS "partitons_in_progress",
   COUNT(1) FILTER (WHERE t2."is_completed" = TRUE) AS "partitions_completed",
   SUM(t2."remaining") AS "keys_remaining",
   SUM(t2."processed") AS "keys_completed",
