--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -364,8 +364,8 @@ WHERE
   t1."completed" AS "completed",
   t1."state" AS "state",
   t1."error" AS "error",
-  (SELECT COUNT(1) FROM "partitions" WHERE ("job_id" = t1."id") AND ("is_completed" = 0) AND ("owner" IS NULL) AND ("processed" = 0)) AS "partitons_waiting",
-  (SELECT COUNT(1) FROM "partitions" WHERE ("job_id" = t1."id") AND ("is_completed" = 0) AND (("owner" IS NOT NULL) OR ("processed" &gt; 0))) AS "partitons_started",
+  (SELECT COUNT(1) FROM "partitions" WHERE ("job_id" = t1."id") AND ("is_completed" = 0) AND ("owner" IS NULL) AND ("processed" = 0)) AS "partitons_untouched",
+  (SELECT COUNT(1) FROM "partitions" WHERE ("job_id" = t1."id") AND ("is_completed" = 0) AND (("owner" IS NOT NULL) OR ("processed" &gt; 0))) AS "partitons_in_progress",
   (SELECT COUNT(1) FROM "partitions" WHERE ("job_id" = t1."id") AND ("is_completed" = 1)) AS "partitions_completed",
   SUM(t2."remaining") AS "keys_remaining",
   SUM(t2."processed") AS "keys_completed",
