Removes the obsolete IEngineDataStore.UpdateJobAsync(...) method.

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -322,12 +322,12 @@ WHERE
   t1."state" AS "state",
   t1."error" AS "error",
   COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND (t2."owner" IS NULL) AND (t2."processed" = 0)) AS "partitons_untouched",
-  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND ((t2."owner" IS NOT NULL) OR (t2."processed" > 0))) AS "partitons_in_progress",
+  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND ((t2."owner" IS NOT NULL) OR (t2."processed" &gt; 0))) AS "partitons_in_progress",
   COUNT(1) FILTER (WHERE t2."is_completed" = TRUE) AS "partitions_completed",
   SUM(t2."remaining") AS "keys_remaining",
   SUM(t2."processed") AS "keys_completed",
   COALESCE(MAX(t2."updated"), t1."updated") AS "last_activity",
-  COALESCE((SELECT SUM("acquired") - COUNT(1) FROM "dipren"."partitions" WHERE ("job_id" = t1."id") AND ("acquired" > 0)), 0) AS "ownership_changes",
+  COALESCE((SELECT SUM("acquired") - COUNT(1) FROM "dipren"."partitions" WHERE ("job_id" = t1."id") AND ("acquired" &gt; 0)), 0) AS "ownership_changes",
   COUNT(1) FILTER (WHERE (t1."state" = 2) AND (t2."is_split_requested" = TRUE)) AS "split_requests_pending"
 FROM
   "dipren"."jobs" t1
@@ -432,24 +432,6 @@ FROM
   "candidate"
 WHERE
   ("target"."id" = "candidate"."id");</value>
-  </data>
-  <data name="QueryUpdateJobById" xml:space="preserve">
-    <value>UPDATE
-  "dipren"."jobs"
-SET
-  "updated" = @updated,
-  "state" = @state,
-  "error" = @error
-WHERE
-  ("id" = @id)
-RETURNING
-  "id" AS "id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "started" AS "started",
-  "completed" AS "completed",
-  "state" AS "state",
-  "error" AS "error";</value>
   </data>
   <data name="QueryUpdateSplitPartition" xml:space="preserve">
     <value>UPDATE
