Renames the Scheduler.GetJobStateAsync(...) method to GetStatusReportAsync(...).

--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -355,7 +355,7 @@ FROM
 WHERE
   "id" = $id;</value>
   </data>
-  <data name="QueryRetrieveJobSummary" xml:space="preserve">
+  <data name="QueryRetrieveJobStatusReport" xml:space="preserve">
     <value>SELECT
   t1."id" AS "id",
   t1."created" AS "created",
