--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -312,7 +312,7 @@ FROM
 WHERE
   ("id" = @id);</value>
   </data>
-  <data name="QueryRetrieveJobSummary" xml:space="preserve">
+  <data name="QueryRetrieveJobStatusReport" xml:space="preserve">
     <value>SELECT
   t1."id" AS "id",
   t1."created" AS "created",
