Adds support for building a status report for an existing job (#48)

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -150,6 +150,8 @@ WHERE
   "id",
   "created",
   "updated",
+  "started",
+  "completed",
   "state",
   "error"
 )
@@ -158,6 +160,8 @@ VALUES
   @id,
   @created,
   @updated,
+  @started,
+  @completed,
   @state,
   @error
 );</value>
@@ -196,6 +200,77 @@ VALUES
   @is_split_requested
 );</value>
   </data>
+  <data name="QueryMarkJobAsCompleted" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "completed" = @timestamp,
+  "state" = @state
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobAsFailed" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "state" = @state,
+  "error" = @error
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobAsReady" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "state" = @state
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobAsStarted" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "started" = @timestamp,
+  "state" = @state
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
   <data name="QueryReportProgress" xml:space="preserve">
     <value>UPDATE
   "dipren"."partitions"
@@ -228,12 +303,45 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
   "state" AS "state",
   "error" AS "error"
 FROM
   "dipren"."jobs"
 WHERE
   ("id" = @id);</value>
+  </data>
+  <data name="QueryRetrieveJobStatusReport" xml:space="preserve">
+    <value>SELECT
+  t1."id" AS "id",
+  t1."created" AS "created",
+  t1."updated" AS "updated",
+  t1."started" AS "started",
+  t1."completed" AS "completed",
+  t1."state" AS "state",
+  t1."error" AS "error",
+  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND (t2."owner" IS NULL) AND (t2."processed" = 0)) AS "partitons_untouched",
+  COUNT(1) FILTER (WHERE (t2."is_completed" = FALSE) AND ((t2."owner" IS NOT NULL) OR (t2."processed" &gt; 0))) AS "partitons_in_progress",
+  COUNT(1) FILTER (WHERE t2."is_completed" = TRUE) AS "partitions_completed",
+  SUM(t2."remaining") AS "keys_remaining",
+  SUM(t2."processed") AS "keys_completed",
+  COALESCE(MAX(t2."updated"), t1."updated") AS "last_activity",
+  COALESCE((SELECT SUM("acquired") - COUNT(1) FROM "dipren"."partitions" WHERE ("job_id" = t1."id") AND ("acquired" &gt; 0)), 0) AS "ownership_changes",
+  COUNT(1) FILTER (WHERE (t1."state" = 2) AND (t2."is_completed" = FALSE) AND (t2."is_split_requested" = TRUE)) AS "split_requests_pending"
+FROM
+  "dipren"."jobs" t1
+  LEFT JOIN "dipren"."partitions" t2 ON (t1."id" = t2."job_id")
+WHERE
+  (t1."id" = @id)
+GROUP BY
+  t1."id",
+  t1."created",
+  t1."updated",
+  t1."started",
+  t1."completed",
+  t1."state",
+  t1."error";</value>
   </data>
   <data name="QueryRetrievePartitionById" xml:space="preserve">
     <value>SELECT
@@ -324,22 +432,6 @@ FROM
   "candidate"
 WHERE
   ("target"."id" = "candidate"."id");</value>
-  </data>
-  <data name="QueryUpdateJobById" xml:space="preserve">
-    <value>UPDATE
-  "dipren"."jobs"
-SET
-  "updated" = @updated,
-  "state" = @state,
-  "error" = @error
-WHERE
-  ("id" = @id)
-RETURNING
-  "id" AS "id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "state" AS "state",
-  "error" AS "error";</value>
   </data>
   <data name="QueryUpdateSplitPartition" xml:space="preserve">
     <value>UPDATE
