--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -150,6 +150,8 @@ WHERE
   "id",
   "created",
   "updated",
+  "batch_size",
+  "timeout",
   "started",
   "completed",
   "state",
@@ -160,6 +162,8 @@ VALUES
   @id,
   @created,
   @updated,
+  @batch_size,
+  @timeout,
   @started,
   @completed,
   @state,
@@ -213,6 +217,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -231,6 +237,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -248,6 +256,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -266,6 +276,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -303,6 +315,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -317,6 +331,8 @@ WHERE
   t1."id" AS "id",
   t1."created" AS "created",
   t1."updated" AS "updated",
+  t1."batch_size" AS "batch_size",
+  t1."timeout" AS "timeout",
   t1."started" AS "started",
   t1."completed" AS "completed",
   t1."state" AS "state",
@@ -338,6 +354,8 @@ GROUP BY
   t1."id",
   t1."created",
   t1."updated",
+  t1."batch_size",
+  t1."timeout",
   t1."started",
   t1."completed",
   t1."state",
