--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -134,6 +134,8 @@ FROM
   "id" VARCHAR(256) NOT NULL,
   "created" DATETIME NOT NULL,
   "updated" DATETIME NOT NULL,
+  "batch_size" INTEGER NOT NULL,
+  "timeout" BIGINT NOT NULL,
   "started" DATETIME NULL,
   "completed" DATETIME NULL,
   "state" INTEGER NOT NULL,
@@ -193,6 +195,8 @@ WHERE
   "id",
   "created",
   "updated",
+  "batch_size",
+  "timeout",
   "started",
   "completed",
   "state",
@@ -203,6 +207,8 @@ VALUES
   $id,
   $created,
   $updated,
+  $batch_size,
+  $timeout,
   $started,
   $completed,
   $state,
@@ -256,6 +262,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -274,6 +282,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -291,6 +301,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -309,6 +321,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -346,6 +360,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -360,6 +376,8 @@ WHERE
   t1."id" AS "id",
   t1."created" AS "created",
   t1."updated" AS "updated",
+  t1."batch_size" AS "batch_size",
+  t1."timeout" AS "timeout",
   t1."started" AS "started",
   t1."completed" AS "completed",
   t1."state" AS "state",
@@ -381,6 +399,8 @@ GROUP BY
   t1."id",
   t1."created",
   t1."updated",
+  t1."batch_size",
+  t1."timeout",
   t1."started",
   t1."completed",
   t1."state",
