--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -136,6 +136,7 @@ FROM
   "updated" DATETIME NOT NULL,
   "batch_size" INTEGER NOT NULL,
   "timeout" BIGINT NOT NULL,
+  "clock_drift" BIGINT NOT NULL,
   "started" DATETIME NULL,
   "completed" DATETIME NULL,
   "state" INTEGER NOT NULL,
@@ -197,6 +198,7 @@ WHERE
   "updated",
   "batch_size",
   "timeout",
+  "clock_drift",
   "started",
   "completed",
   "state",
@@ -209,6 +211,7 @@ VALUES
   $updated,
   $batch_size,
   $timeout,
+  $clock_drift,
   $started,
   $completed,
   $state,
@@ -264,6 +267,7 @@ RETURNING
   "updated" AS "updated",
   "batch_size" AS "batch_size",
   "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -284,6 +288,7 @@ RETURNING
   "updated" AS "updated",
   "batch_size" AS "batch_size",
   "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -303,6 +308,7 @@ RETURNING
   "updated" AS "updated",
   "batch_size" AS "batch_size",
   "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -323,6 +329,7 @@ RETURNING
   "updated" AS "updated",
   "batch_size" AS "batch_size",
   "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -362,6 +369,7 @@ RETURNING
   "updated" AS "updated",
   "batch_size" AS "batch_size",
   "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -378,6 +386,7 @@ WHERE
   t1."updated" AS "updated",
   t1."batch_size" AS "batch_size",
   t1."timeout" AS "timeout",
+  t1."clock_drift" AS "clock_drift",
   t1."started" AS "started",
   t1."completed" AS "completed",
   t1."state" AS "state",
@@ -401,6 +410,7 @@ GROUP BY
   t1."updated",
   t1."batch_size",
   t1."timeout",
+  t1."clock_drift",
   t1."started",
   t1."completed",
   t1."state",
