Ensures that all processing nodes use the same batch size, batch timeout and maximum clock-drift values (#50)

--- a/demo/EXBP.Dipren.Demo.Postgres/Commands/DeployQueries.resx
+++ b/demo/EXBP.Dipren.Demo.Postgres/Commands/DeployQueries.resx
@@ -149,6 +149,9 @@ CREATE TABLE "dipren"."jobs"
   "id" VARCHAR(256) NOT NULL,
   "created" TIMESTAMP NOT NULL,
   "updated" TIMESTAMP NOT NULL,
+  "batch_size" INTEGER NOT NULL,
+  "timeout" BIGINT NOT NULL,
+  "clock_drift" BIGINT NOT NULL,
   "started" TIMESTAMP NULL,
   "completed" TIMESTAMP NULL,
   "state" INTEGER NOT NULL,
@@ -160,6 +163,9 @@ CREATE TABLE "dipren"."jobs"
 COMMENT ON COLUMN "dipren"."jobs"."id" IS 'The unique identifier of the distributed processing job';
 COMMENT ON COLUMN "dipren"."jobs"."created" IS 'A timestamp indicating when the job was created.';
 COMMENT ON COLUMN "dipren"."jobs"."updated" IS 'A timestamp indicating when the job was last updated.';
+COMMENT ON COLUMN "dipren"."jobs"."batch_size" IS 'The maximum number of keys to include in a batch.';
+COMMENT ON COLUMN "dipren"."jobs"."timeout" IS 'The amount of time after which a partition is considered stalled.';
+COMMENT ON COLUMN "dipren"."jobs"."clock_drift" IS 'The maximum time divergence between processing nodes.';
 COMMENT ON COLUMN "dipren"."jobs"."started" IS 'A timestamp indicating when the job was started.';
 COMMENT ON COLUMN "dipren"."jobs"."completed" IS 'A timestamp indicating when the job was completed.';
 COMMENT ON COLUMN "dipren"."jobs"."state" IS 'Indicates the state of the job such.';
