--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -134,6 +134,9 @@ FROM
   "id" VARCHAR(256) NOT NULL,
   "created" DATETIME NOT NULL,
   "updated" DATETIME NOT NULL,
+  "batch_size" INTEGER NOT NULL,
+  "timeout" BIGINT NOT NULL,
+  "clock_drift" BIGINT NOT NULL,
   "started" DATETIME NULL,
   "completed" DATETIME NULL,
   "state" INTEGER NOT NULL,
@@ -193,6 +196,9 @@ WHERE
   "id",
   "created",
   "updated",
+  "batch_size",
+  "timeout",
+  "clock_drift",
   "started",
   "completed",
   "state",
@@ -203,6 +209,9 @@ VALUES
   $id,
   $created,
   $updated,
+  $batch_size,
+  $timeout,
+  $clock_drift,
   $started,
   $completed,
   $state,
@@ -256,6 +265,9 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -274,6 +286,9 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -291,6 +306,9 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -309,6 +327,9 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -346,6 +367,9 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "batch_size" AS "batch_size",
+  "timeout" AS "timeout",
+  "clock_drift" AS "clock_drift",
   "started" AS "started",
   "completed" AS "completed",
   "state" AS "state",
@@ -360,6 +384,9 @@ WHERE
   t1."id" AS "id",
   t1."created" AS "created",
   t1."updated" AS "updated",
+  t1."batch_size" AS "batch_size",
+  t1."timeout" AS "timeout",
+  t1."clock_drift" AS "clock_drift",
   t1."started" AS "started",
   t1."completed" AS "completed",
   t1."state" AS "state",
@@ -381,6 +408,9 @@ GROUP BY
   t1."id",
   t1."created",
   t1."updated",
+  t1."batch_size",
+  t1."timeout",
+  t1."clock_drift",
   t1."started",
   t1."completed",
   t1."state",
