--- a/source/EXBP.Dipren/SchedulerResources.resx
+++ b/source/EXBP.Dipren/SchedulerResources.resx
@@ -141,4 +141,7 @@
   <data name="EventRetrievingRangeBoundaries" xml:space="preserve">
     <value>Retrieving range boundaries.</value>
   </data>
+  <data name="EventTimeoutValueTooLow" xml:space="preserve">
+    <value>The specified timeout value might be too low.</value>
+  </data>
 </root>
