Ensures that a warning is generated if the processing timeout value seems too low (#54)

--- a/source/EXBP.Dipren/SchedulerResources.resx
+++ b/source/EXBP.Dipren/SchedulerResources.resx
@@ -141,4 +141,7 @@
   <data name="EventRetrievingRangeBoundaries" xml:space="preserve">
     <value>Retrieving range boundaries.</value>
   </data>
+  <data name="EventTimeoutValueTooLow" xml:space="preserve">
+    <value>Estimating the size of the key range took longer than the specified timeout. The timeout value specified might be too low.</value>
+  </data>
 </root>
